# ritm_interactive_segmentation

./: .gitignore  demo.py  pyproject.toml
src/isegm/data/: transforms.py
src/isegm/inference/: utils.py
src/isegm/utils/: exp.py
src/isegm/utils/exp_imports/: default.py
src/isegm_gui/: __init__.py  app.py  canvas.py
