[project]
name = "isegm"
version = "0.1"
dependencies = [
    "numpy",
    "scipy",
    "Cython",
    "opencv-python-headless",
    "Pillow",
    "easydict",
    "torch>=1.4.0",
    "torchvision>=0.5.0",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
isegm = { path = ".", editable = true }

[tool.pixi.tasks]
